完成了订单提交和显示，购物车的细节，和高德IP定位

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,8 +40,10 @@
                                 </li>
                                 {% if request.user.is_authenticated %}
                                     <li>
-                                        <a href="">
-                                            <span class="glyphicon glyphicon-map-marker"></span> 安徽</a>
+                                        <a>
+                                            <span class="glyphicon glyphicon-map-marker"></span>
+                                            <span id="location"></span>
+                                        </a>
                                     </li>
                                 {% endif %}
                             </ul>
