--- a/templates/include/cart_item.html
+++ b/templates/include/cart_item.html
@@ -1,6 +1,7 @@
 <tr>
     <td style="vertical-align:middle;">
-        <input style="margin-left:15px;" class="check-one" type="checkbox" title="选中" checked="checked">
+        <input style="margin-left:15px;" class="check-one" id="{{ item.id }}" type="checkbox" title="选中"
+                {% if item.checked %} checked="checked"{% endif %}>
     </td>
     <td>
         <a href="">
@@ -20,11 +21,11 @@
     <td>
         <span>
             <a style="text-align:center;border:solid 1px lightgray;border-right:0;float:left;height:28px;width:28px;background-color: #f4f4f4;"
-               href="" type="button">-</a>
+               href="{{ url('cart:minus',args=(item.id,)) }}" type="button">-</a>
             <input style="text-align:center;width:40px;height:28px;float:left;border:solid 1px lightgray;" type="text"
-                   value="{{ item.quantity }}" title="数量">
+                   value="{{ item.quantity }}" id="{{ item.id }}" title="quantity">
             <a style="text-align:center;border:solid 1px lightgray;border-left:0;float:left;height:28px;width:28px;background-color: #f4f4f4;"
-               href="" type="button">+</a>
+               href="{{ url('cart:add',args=(book.id,)) }}" type="button">+</a>
         </span>
     </td>
     <td style="color:red;" class="subtotal-price">￥{{ item.get_subtotal_price() }}</td>
