--- a/templates/order.html
+++ b/templates/order.html
@@ -1,58 +1,27 @@
 {% extends 'base.html' %}
-
+{% import 'include/macros.html' as macros %}
 
 {% block page_content %}
     <div class="row">
-        <div class="col-md-offset-2 col-md-8">
-            <table style="margin:10px 0 20px;" class="card table">
-                <thead>
-                <tr>
-                    <th>收货人</th>
-                    <th>图书</th>
-                    <th>支付方式</th>
-                    <th>支付金额</th>
-                    <th>下单时间</th>
-                    <th>完成时间</th>
-                    <th>状态</th>
-                    <th>操作</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for order in orders %}
-                    <tr>
-                        <td>
-                            <p>{{ order.recipient }}</p>
-                        </td>
-                        <td>
-                            <p>{{ order.item }}</p>
-                        </td>
-                        <td>
-                            <p>{{ order.payment_method.get_name_display() }}</p>
-                        </td>
-                        <td>
-                            <p>{{ order.payment_amount }}</p>
-                        </td>
-                        <td>
-                            <p>{{ order.created_time }}</p>
-                        </td>
-                        <td>
-                            <p>{{ order.finished_time | default('-',True) }}</p>
-                        </td>
-                        <td>
-                            <p>{{ order.get_state_display() }}</p>
-                        </td>
-                        <td>
-                            <div class="btn-group-vertical">
-                                <a href=""
-                                   class="btn btn-sm btn-danger">删除</a>
-                                <button class="btn btn-sm btn-warning">评价</button>
-                                <button class="btn btn-sm btn-info">再次购买</button>
-                            </div>
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+        <div style="padding:0;" class="col-md-offset-1 col-md-10">
+            <div style="margin:10px 0 20px;" class="card">
+                <ul style="margin-top:10px;" id="myTab" class="nav nav-tabs">
+                    <li class="active">
+                        <a href="#processing" data-toggle="tab">
+                            进行中
+                        </a>
+                    </li>
+                    <li><a href="#finished" data-toggle="tab">已完成</a></li>
+                </ul>
+                <div id="myTabContent" class="tab-content">
+                    <div class="tab-pane fade in active" id="processing">
+                        {{ macros.order_list(processing_orders) }}
+                    </div>
+                    <div class="tab-pane fade" id="finished">
+                        {{ macros.order_list(finished_orders) }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
