添加了404页面

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block styles %}
     {{ super() }}
-    <link href="{{ static('/css/index.css') }}" rel="stylesheet">
+    <link href="{{ static('css/index.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block page_content %}
@@ -73,5 +73,5 @@
 
 {% block scripts %}
     {{ super() }}
-    <script src="{{ static('/js/index.js') }}"></script>
+    <script src="{{ static('js/index.js') }}"></script>
 {% endblock %}
